--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.2",
     "aos": "^2.3.4",
     "gsap": "^3.12.7",
     "locomotive-aos": "^1.0.7",
@@ -17,8 +18,8 @@
     "motion-plus": "^0.1.6",
     "next": "15.2.4",
     "nitlix-aos": "^1.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
